tests/snapshots/run_wpt_conformance__onnx_batchNormalization_options_axis_0___softplus.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "batchNormalization options.axis=0 + softplus",
    "onnx",
    "PASS",
)
